2.0-2:
  * Add necessary kernel parameters for Docker

2.0-1:
  * More roaming-friendly cvmfs settings
  * Update cvmfs to 2.2.0 pre-release
  * Support ${ROOT_RW}/aux/cvmfs_force_tag for rollbacks
  * Kernel 3.18

1.18-15:
  * Add support for Realtek 8139 C+ NICs
  * Support static network initialization of eth0 from OpenNebula context 
    (CVM-705)
  * JSON signature for hdd and iso images (CVM-806)

1.18-14:
  * Add cernvm_inject contextualization
  * Add systemd initrd interface for shutdown
  * Add systemd.show_status=1 kernel parameter
  * Kernel 3.10.67
  * Add public key for cernvm-sl7.cern.ch
  * Cvmfs 2.1.20
  * Add CVMFS_HIDE_MAGIC_XATTRS=yes paramter

1.18-13:
  * Enforce 5 seconds timeout for initial NTP query

1.18-12:
  * Kernel 3.10.64

1.18-11:
  * Get time via NTP from pool.ntp.org
  * Enable file capabilities in aufs

1.18-10:
  * Improve logging of contextualization
  * Support DHCP configuration for MTU and static routes

1.18-9:
  * Support CVMFS_PAC_URLS contextualization

1.18-4:
  * Add bridge support
  * Add more cgroup controllers (device, network path)

1.18-3:
  * Fix meta-data retrieval on some OpenStack platforms (thanks to Frank Berghaus)

1.18-2:

1.18-1:
  * Kernel 3.10.40

1.17-12:
  * Kernel 3.10.39
  * Turn on host I/O cache in OVA images
  * User dnsnathostresolver instead of dnsnatproxy for OVA

1.17-11:
 * Fix contexutalization default off setting

1.17-10:
 * Kernel 3.10.38

1.17-9:
  * cvmfs 2.1.18
  * Resize root fs by default
  * Kernel 3.10.37

1.17-8:
  * Extract pickup data into ${ROOT}

1.17-7:
  * Support pickup from /cernvm/pickup.tar.gz
  * Fix false GCE detection
  * Kernel 3.10.35

1.17-6:
  * Add SYSFS_DEPRECATED support
  * Fix rebasing /root
  * Add vmxglx driver
  * Kernel 3.10.34

1.17-5:
  * Handle gziped contexts
  * Fix quotes of cvmfs proxy
  * Add DESY Stratum 1
  * Kernel 3.10.33
  * Update open-vm-tools kernel modules to 9.4.0
  * Google Compute Engine
    * MTU 1460, otherwise network hangs