@@ -24,6 +24,7 @@ initrd.$(UCERNVM_STRONG_VERSION): rebuild.sh $(wildcard scripts.d/*) $(wildcard 
 	  KERNEL_STRONG_VERSION=$(KERNEL_STRONG_VERSION) \
 	  BB_STRONG_VERSION=$(BB_STRONG_VERSION) \
 	  CURL_STRONG_VERSION=$(CURL_STRONG_VERSION) \
+	  DROPBEAR_STRONG_VERSION=$(DROPBEAR_STRONG_VERSION) \
 	  NTPCLIENT_STRONG_VERSION=$(NTPCLIENT_STRONG_VERSION) \
 	  DHCLIENT_STRONG_VERSION=$(DHCLIENT_STRONG_VERSION) \
 	  E2FSPROGS_STRONG_VERSION=$(E2FSPROGS_STRONG_VERSION) \
