@@ -7,6 +7,8 @@ BB_UPSTREAM_VERSION = 1.20.2
 BB_RELEASE = 1
 CURL_UPSTREAM_VERSION = 7.32.0
 CURL_RELEASE = 1
+DROPBEAR_UPSTREAM_VERSION = 2015.67
+DROPBEAR_RELEASE = 1
 NTPCLIENT_UPSTREAM_VERSION = 2010
 NTPCLIENT_RELEASE = 1
 DHCLIENT_UPSTREAM_VERSION = 4.3.1
@@ -48,6 +50,8 @@ BB_VERSION = $(BB_UPSTREAM_VERSION)-$(BB_RELEASE)
 BB_STRONG_VERSION = $(BB_VERSION).cernvm.x86_64
 CURL_VERSION = $(CURL_UPSTREAM_VERSION)-$(CURL_RELEASE)
 CURL_STRONG_VERSION = $(CURL_VERSION).cernvm.x86_64
+DROPBEAR_VERSION = $(DROPBEAR_UPSTREAM_VERSION)-$(DROPBEAR_RELEASE)
+DROPBEAR_STRONG_VERSION = $(DROPBEAR_VERSION).cernvm.x86_64
 NTPCLIENT_VERSION = $(NTPCLIENT_UPSTREAM_VERSION)-$(NTPCLIENT_RELEASE)
 NTPCLIENT_STRONG_VERSION = $(NTPCLIENT_VERSION).cernvm.x86_64
 DHCLIENT_VERSION = $(DHCLIENT_UPSTREAM_VERSION)-$(DHCLIENT_RELEASE)
