@@ -2,6 +2,7 @@ PACKAGES = \
   busybox \
   curl \
   dhclient \
+  dropbear \
   e2fsprogs \
   kexec \
   ntpclient \
