@@ -1,0 +1,3 @@
+DROPBEAR_SOURCETREE = dropbear-$(DROPBEAR_UPSTREAM_VERSION)
+DROPBEAR_TARBALL = dropbear-$(DROPBEAR_UPSTREAM_VERSION).tar.bz2
+DROPBEAR_SOURCE = http://matt.ucc.asn.au/dropbear/$(DROPBEAR_TARBALL)
