@@ -34,6 +34,7 @@ export BASEDIR=$(pwd)
 [ -z $KERNEL_STRONG_VERSION ] && die "KERNEL_STRONG_VERSION missing"
 [ -z $BB_STRONG_VERSION ] && die "BB_STRONG_VERSION missing"
 [ -z $CURL_STRONG_VERSION ] && die "CURL_STRONG_VERSION missing"
+[ -z $DROPBEAR_STRONG_VERSION ] && die "DROPBEAR_STRONG_VERSION missing"
 [ -z $NTPCLIENT_STRONG_VERSION ] && die "NTPCLIENT_STRONG_VERSION missing"
 [ -z $E2FSPROGS_STRONG_VERSION ] && die "E2FSPROGS_STRONG_VERSION missing"
 [ -z $KEXEC_STRONG_VERSION ] && die "KEXEC_STRONG_VERSION missing"
@@ -44,6 +45,7 @@ export KERNEL_STRONG_VERSION
 export BB_STRONG_VERSION
 export UCERNVM_STRONG_VERSION
 export CURL_STRONG_VERSION
+export DROPBEAR_STRONG_VERSION
 export NTPCLIENT_STRONG_VERSION
 export E2FSPROGS_STRONG_VERSION
 export KEXEC_STRONG_VERSION
