@@ -1,4 +1,6 @@
 2.0-2:
+  * Add cvmssh kernel command line switch
+  * Use xz kernel for Amazon (PV-GRUB >= 1.04)
   * Add necessary kernel parameters for Docker
 
 2.0-1:
